Merge splash and icon changes into tip.